# hypersimplex-representation-cpp

./: CMakeLists.txt  README.md  autgroup.cpp  autgroup.h  backend.cpp  backend.h  combinadic.h  convhull.cpp  convhull.h  gimatrix.cpp  gimatrix.h  graph.cpp  graph.h  hypersimplex.cpp  hypersimplex.h  main.cpp  nllsprepr.cpp  nllsprepr.h  resources.qrc  schlegel.cpp  schlegel.h  vertex.cpp  vertex.h
gui/: Application.qml  Entity3D.qml  SliderRepeater.qml  VarSlider.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
view3d/: edge3dentity.cpp  edge3dentity.h  root3dentity.cpp  root3dentity.h  root3dwrapper.cpp  root3dwrapper.h  vertex3dentity.cpp  vertex3dentity.h
